--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: hello-world
     spec:
+      serviceAccountName: hello-world-sa
       containers:
       - name: hello-world-container
         image: skr420/nodeapp:1.0
